Fix z-indexes

--- a/styles.css
+++ b/styles.css
@@ -32,6 +32,8 @@ body {
   backdrop-filter: blur(8px);
   color: #fff;
   font-family: "Montserrat", Arial, Helvetica, sans-serif;
+  position: relative;
+  z-index: 2;
 }
 
 .background {
@@ -41,6 +43,7 @@ body {
   position: absolute;
   left: 0;
   top: 0;
+  z-index: 1;
 }
 
 .background__img {
